--- a/styles.css
+++ b/styles.css
@@ -45,5 +45,32 @@ a:hover {
 
 /* Main */
 
+.section-1 {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    background-image: url(/images/backgroung_image.jpg);
+    background-size: cover;
+    height: 70vh;
+}
+
+h1 {
+    color: white;
+    font-size: 2em;
+    font-weight: 400;
+}
+
+.description {
+    font-size: 1.3em;
+    width: 65%;
+    text-align: center;
+    margin: 3em auto;
+    color: rgb(83, 80, 80);
+}
+
+.bullet-points {
+    display: flex;
+}
 
 /* Footer */
